# LioKorCode_Checker

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  config.template.py  flask_app.py  format_lint_and_check_types.sh  liokor_code_checker.service  mypy.ini  nginx.config  openapi.yaml  pyproject.toml  requirements.txt  uwsgi.ini
.github/workflows/: check-and-test-source.yml
linter/: linter.py
liokorcode_checker_image/: Dockerfile
requirements/: dev.txt  prod.txt
scripts/: check.py
solution_checker/: constants.py  docker_utils.py  models.py  solution_checker.py  utils.py
solution_checker/check_steps/: build.py  lint.py  test.py
src/: app.py  config.py  config.template.py  flask_app.py  func_test.py  main.py  task_checker.py  test.py  utils.py  wsgi.py
src/common/dtos/: base_dto.py
src/linter/: lint.py  linter.py
src/linter/test/: test.py
src/linter/test_cases/: c_almost_good_file.c  c_bad_file.c  c_good_file.c
src/solution_checker/: docker_utils.py  models.py  solution_checker.py  utils.py
src/solution_checker/check_steps/: build.py  lint.py  test.py
src/solution_checker/dtos/: check_request_dto.py
src/solution_checker/threads/: docker_base_thread.py  docker_build_thread.py  docker_test_thread.py
system_configs/: liokor_code_checker.service  nginx.config  nginx_balancer.config
tests/: test_solution_checker.py
tests/integration_tests/solution_checker/: test_solution_checker.py
tests/linter/: test_linter.py
tests/linter/test_cases/: c_good_file.c  c_one_liners.c
tests/solution_checker/: test_solution_checker.py
(+9 files in other folders)
