[tool.poetry]
name = "liokorcode-checker"
version = "0.3.0"
description = ""
authors = ["Artem Korolev <korolion31@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
uwsgi = "^2.0.21"
flask = "^2.2.3"
docker = "^6.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
types-Flask = "^1.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
