[tool.poetry]
name = "liokorcode-checker"
version = "0.3.0"
description = ""
authors = ["Artem Korolev <korolion31@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
uwsgi = "^2.0.21"
flask = "^2.2.3"
docker = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.354"
ruff = "^0.3.3"
types-Flask = "^1.1.6"

[tool.poetry.scripts]
check = "scripts.check:check_and_fix"
check-no-fix = "scripts.check:check_no_fix"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://github.com/docker/docker-py/issues/2796
# [tool.pyright]
# strict = ["**"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "I", "C4", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]
